Fix: OPEX-196 Break email if it's too long (#75)

--- a/src/components/Profile/Profile.pcss
+++ b/src/components/Profile/Profile.pcss
@@ -34,6 +34,7 @@
     margin-top: calc(var(--gap) * 5);
     &-user {
       p {
+        word-break: break-all;
         font-size: 45px;
         margin: 0 0 25px 0;
       }
